# aichallenge-2024-iASL

./: aa.py  resize.py
aichallenge/: run.bash  run_evaluation.bash
aichallenge/workspace/src/aichallenge_submit/added_autoware_module/planning/costmap_generator/: package.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit.launch.xml  original_launch.launch.xml  original_launch_at.launch.xml  reference.launch.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/map/: iASL_map.pgm  iASL_map.yaml  lanelet2_map.osm  lanelet2_map_expanded.osm  lanelet2_map_optim.osm
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/param/control/: mpc.param.yaml
aichallenge/workspace/src/aichallenge_submit/costmap_server/: package.xml
aichallenge/workspace/src/aichallenge_submit/costmap_server/config/: costmap.param.yaml
aichallenge/workspace/src/aichallenge_submit/costmap_server/src/: costmap_2d.cpp  costmap_2d.hpp
aichallenge/workspace/src/aichallenge_submit/create_route/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/create_route/config/: create.param.yaml
aichallenge/workspace/src/aichallenge_submit/create_route/csv/: left.csv  right.csv
aichallenge/workspace/src/aichallenge_submit/create_route/src/: create_route.cpp  create_route.hpp
aichallenge/workspace/src/aichallenge_submit/goal_pose_setter/config/: default_goal_pose.param.yaml
aichallenge/workspace/src/aichallenge_submit/obstacle_avoidance/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/obstacle_avoidance/config/: avoidance.param.yaml
aichallenge/workspace/src/aichallenge_submit/obstacle_avoidance/src/: obstacle_avoidance.cpp  obstacle_avoidance.hpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/contorl_mode_handler/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/contorl_mode_handler/src/: control_event_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/control/key_node/: package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/key_node/: setup.cfg  setup.py
aichallenge/workspace/src/aichallenge_submit/original_pkg/object_event_handler/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/object_event_handler/src/: object_event_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/object_info_publisher/src/: object_info_publisher_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/perception/object_event_handler/: package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/pit_stop_package/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/pit_stop_package/src/: pit_stop_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/planning/route_publisher/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/planning/route_visualizer/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/planning/route_visualizer/src/: route_visualizer_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/planning/scenario_pub_pkg/: CMakeLists.txt
aichallenge/workspace/src/aichallenge_submit/original_pkg/planning/section_event_handler/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/planning/trajectory_manager/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/planning/trajectory_manager/src/: trajectory_manage_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/pose_publisher/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/pose_publisher/src/: pose_publisher_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/reverse_controller/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/reverse_controller/src/: reverse_control_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/route_publisher/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/route_publisher/config/: route_pose.yaml
aichallenge/workspace/src/aichallenge_submit/original_pkg/route_publisher/src/: route_publisher_node.cpp
aichallenge/workspace/src/aichallenge_submit/original_pkg/trajectory_manager/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/original_pkg/trajectory_selector/: CMakeLists.txt
aichallenge/workspace/src/aichallenge_submit/path_analyzer/: package.xml  setup.cfg  setup.py
aichallenge/workspace/src/aichallenge_submit/path_analyzer/launch/: section_path_server.launch.xml
aichallenge/workspace/src/aichallenge_submit/path_analyzer/path_analyzer/: section_path_server.py
aichallenge/workspace/src/aichallenge_submit/path_conversion/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/path_conversion/src/: path_to_laneid_converter.cpp
aichallenge/workspace/src/aichallenge_submit/path_publisher/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/path_publisher/config/: path.param.yaml
aichallenge/workspace/src/aichallenge_submit/path_publisher/csv/: centerline.csv  raceline.csv  raceline_v2.csv
aichallenge/workspace/src/aichallenge_submit/path_publisher/src/: path_publisher.cpp  path_publisher.hpp
aichallenge/workspace/src/aichallenge_submit/path_service/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/path_service/srv/: GetObstaclePath.srv  GetPath.srv
aichallenge/workspace/src/aichallenge_submit/path_visualizer/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/path_visualizer/src/: visualizer.cpp
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/config/: autoware.rviz
lanelet_tools/: csv2osm.py  osm2csv.py
lanelet_tools/csv/osm_to_csv/: long_center.csv  short_center.csv
(+21 files in other folders)
